--- a/src/styles/question.scss
+++ b/src/styles/question.scss
@@ -14,7 +14,7 @@
 
   &.highlighted {
     background: #f4f0ff;
-    border: 1px solid #835afd;
+    border: 1px solid #4DB6AC;
     
     footer .user-info span {
       color: #29292e;
@@ -66,10 +66,10 @@
         gap: 8px;
 
         &.liked {
-          color: #835afd;
+          color: #4DB6AC;
 
           svg path {
-            stroke: #835afd;
+            stroke: #4DB6AC;
           }
         }
       }
