--- a/src/styles/room.scss
+++ b/src/styles/room.scss
@@ -1,4 +1,38 @@
+#page-wrapper {
+  &.dark {
+    background: #333;
+    height: 100vh;
+  }
+}
+
 #page-room {
+
+  &.dark {
+    background: #333;
+    
+    .room-title {
+      h1 {
+        color: #e2e2e2;
+      }
+    }
+
+    form {
+      .form-footer {
+
+        > span {
+          color: #e2e2e2;
+        }
+
+        .user-info {
+          span {
+            color: #e2e2e2;
+          }
+        }
+      }
+    
+    }
+  }
+  
   header {
     padding: 24px;
     border-bottom: 1px solid #e2e2e2;
@@ -42,7 +76,7 @@
 
       span {
         margin-left: 16px;
-        background: #e559f9;
+        background: #03a9f4;
         border-radius: 9999px;
         padding: 8px 16px;
         color: #fff;
@@ -95,7 +129,7 @@
           button {
             background: transparent;
             border: 0;
-            color: #835afd;
+            color: #03a9f4;
             text-decoration: underline;
             font-size: 14px;
             font-weight: 500;
